# waldo

./: .editorconfig  .gitignore  Cargo.toml  deny.toml  flake.nix  justfile
src/: main.rs
