[package]
name = "waldo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.11"
serde_json = "1.0"
